--- a/todo.txt
+++ b/todo.txt
@@ -2,11 +2,14 @@ CHANGES:
  - added "to top" button
  - added photo gallery to activities
  - added details to activities
+ - added honors
+ - ordered activities photos in better "collage" vibe
+ - changed the purpose and use as per meeting
+
+
 
  TO DO:
- - order activities photos in better "collage" vibe
  - add details for remaining professional experiences
- - change the purpose and use as per meeting
  - add links to rest of activities
  - get apo logo
  - add skills somewhere!
